argocd/apps/docker-registry/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: docker-registry
  namespace: docker-registry
spec:
  ports:
  - name: registry
    port: 5000
    targetPort: 5000
  selector:
    app: docker-registry
  type: ClusterIP
